<resources>
    <string name="app_name">MyBudget</string>
    <string name="records">Records</string>
    <string name="currency">$</string>
    
    <string-array name="spinnerDates">
        <item>Day</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>

    <string name="amount">Amount</string>
    <string name="amount_hint">0.00</string>
    <string name="select_category">Select category</string>
    <string name="note">Note</string>
    <string name="note_hint">Enter your note here</string>
    <string name="save">Save</string>
    <string name="invalid_amount">Enter valid amount</string>
    <string name="invalid_category">Select category</string>
    
    <string name="expenses">Expenses</string>
    <string name="budget">Budget</string>

    <string name="current_budget">Current budget</string>
    <string name="monthly_income">Monthly income</string>
    <string name="add_to_budget">Add to budget</string>
    <string name="subtract_from_budget">Subtract from budget</string>

    <string name="food">Food</string>
    <string name="travel">Travel</string>
    <string name="living">Living</string>
    <string name="car">Car</string>
    <string name="clothing">Clothing</string>
    <string name="entertainment">Entertainment</string>
    <string name="fee">Fee</string>
    <string name="investment">Investment</string>
    <string name="others">Others</string>

    <string name="mic_prompt">Enter a value</string>
</resources>